# clipspy

./: MANIFEST.in  Makefile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: action.yml
clips/: clips_build.py  facts.py
manylinux/: Dockerfile
