[project]
name = "clipspy"
requires-python = ">=3.6"
dynamic = ["version"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython",
    "cffi>=1.0.0",
]

build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "clips.__version__"}

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/test"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y libffi-devel make unzip wget",
    "make install-clips",
]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
    "apk add libffi-dev make unzip wget",
    "make install-clips",
]

[tool.cibuildwheel.macos]
before-all = [
    "make install-clips",
]
