[project]
name = "clipspy"
authors = [{ name = "Matteo Cafasso", email = "noxdafox@gmail.com" }]
requires-python = ">=3.7"
description = "CLIPS Python bindings"
readme = "README.rst"
license = { file = "LICENSE.txt" }
keywords = ["clips", "python", "cffi", "expert system"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
]
dependencies = ["cffi>=1.0.0"]
dynamic = ["version"]

[project.urls]
Documentation = "https://clipspy.readthedocs.io/en/latest/"
Source = "https://github.com/noxdafox/clipspy"

[build-system]
requires = ["setuptools>=42", "wheel", "Cython", "cffi>=1.0.0"]

build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "clips.__version__" }

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/test"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y libffi-devel make unzip wget",
    """\
    ([[ -d /host/${GITHUB_WORKSPACE}/clips_source ]] && cp -R /host/${GITHUB_WORKSPACE}/clips_source clips_source) \
    || (make clips && cp -R clips_source /host/clips_source)\
    """,
    "make -o clips install-clips",
]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = ["apk add libffi-dev make unzip wget", "make install-clips"]

[tool.cibuildwheel.macos]
before-all = ["make install-clips"]
